# chatroom_exe_fun

./: .gitignore  Cargo.toml  README.md  run_build  run_build_osx
assets/: Settings.toml.default
src/: main.rs
src/asset/: utils.rs
src/chat/: mod.rs  resources.rs  systems.rs
src/chat/message/: events.rs  mod.rs  systems.rs
src/chat/ui/: events.rs  systems.rs
src/login/: events.rs  systems.rs
src/misc/: systems.rs
src/ui/: README.md  resources.rs  systems.rs
src/ws/: mod.rs  resources.rs  systems.rs
src/ws/url/: resources.rs
