[package]
name = "chatroom_exe_fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
bevy_egui = "0.21"
image = "0.24.6"
# same as bevy
winit = "0.28.6"
websocket = "0.26.5"
ezsockets = "0.5.1"
async-trait = "0.1.72"
url = "2.4.0"
bevy-tokio-tasks = "0.11.0"
crossbeam-channel = "0.5.8"
serde = "1.0.177"
serde_json = "1.0.104"
tokio = "1.29.1"
phf = {version = "0.11.2", features = ["macros"]}


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
